controller pg